--- a/VC_Acq_ExtClk.vcxproj.filters
+++ b/VC_Acq_ExtClk.vcxproj.filters
@@ -10,9 +10,6 @@
     <ClCompile Include="experimentUserInterface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="UdpClient.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="utilities.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -20,6 +17,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="expParadigm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="analogClient.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -33,9 +33,6 @@
     <ClInclude Include="dataOneSample.h">
       <Filter>Head Files</Filter>
     </ClInclude>
-    <ClInclude Include="UdpClient.h">
-      <Filter>Head Files</Filter>
-    </ClInclude>
     <ClInclude Include="motorControl.h">
       <Filter>Head Files</Filter>
     </ClInclude>
@@ -43,6 +40,9 @@
       <Filter>Head Files</Filter>
     </ClInclude>
     <ClInclude Include="NIDAQmx.h">
+      <Filter>Head Files</Filter>
+    </ClInclude>
+    <ClInclude Include="analogClient.h">
       <Filter>Head Files</Filter>
     </ClInclude>
   </ItemGroup>
