--- a/VC_Acq_ExtClk.vcxproj.filters
+++ b/VC_Acq_ExtClk.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="analogClient.h">
       <Filter>Head Files</Filter>
     </ClInclude>
+    <ClInclude Include="okFrontPanelDLL.h">
+      <Filter>Head Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
