working prototype compiled - minor bug fixes remain

--- a/VC_Acq_ExtClk.vcxproj
+++ b/VC_Acq_ExtClk.vcxproj
@@ -24,8 +24,10 @@
     <ClCompile Include="dataOneSample.cpp" />
     <ClCompile Include="experimentUserInterface.cpp" />
     <ClCompile Include="expParadigm.cpp" />
+    <ClCompile Include="FPGAControl.cpp" />
     <ClCompile Include="FPGATest.cpp" />
     <ClCompile Include="motorControl.cpp" />
+    <ClCompile Include="SomeFpga.cpp" />
     <ClCompile Include="utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -33,9 +35,11 @@
     <ClInclude Include="dataLogger.h" />
     <ClInclude Include="dataOneSample.h" />
     <ClInclude Include="expParadigm.h" />
+    <ClInclude Include="FPGAControl.h" />
     <ClInclude Include="motorControl.h" />
     <ClInclude Include="NIDAQmx.h" />
     <ClInclude Include="okFrontPanelDLL.h" />
+    <ClInclude Include="SomeFpga.h" />
     <ClInclude Include="utilities.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -151,7 +155,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <PrecompiledHeaderOutputFile>$(IntDir)VC_Acq_ExtClk.pch</PrecompiledHeaderOutputFile>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <ObjectFileName>$(IntDir)</ObjectFileName>
@@ -167,7 +171,7 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;nidaqmx.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;nidaqmx.lib;pthreadVC2.lib;pthreadVSE2.lib;okFrontPanelDLL.lib;pthreadVCE2.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;C:\T5_BbdlSanger\UPC_R01_grant\source\glut\glut32.lib;C:\SDK\pthreads\lib\x86\pthreadVC2.lib;C:\Program Files\National Instruments\NI-DAQ\DAQmx ANSI C Dev\lib\msvc\NIDAQmx.lib;C:\SDK\AntTweakBar\lib\AntTweakBar.lib;C:\Program Files\Intel\Composer XE 2011 SP1\ipp\lib\ia32\ipps.lib;C:\Program Files\Lua\5.1\lib\lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <AdditionalLibraryDirectories>C:\Users\PXI_BBDL\Documents\GitHub\R01v2\externalLibraries;$(ProgramFiles)\National Instruments\Shared\ExternalCompilerSupport\C\lib32\msvc;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SubSystem>Console</SubSystem>
