--- a/VC_Acq_ExtClk.vcxproj.filters
+++ b/VC_Acq_ExtClk.vcxproj.filters
@@ -22,6 +22,12 @@
     <ClCompile Include="analogClient.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FPGAControl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SomeFpga.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="FPGATest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -49,6 +55,12 @@
       <Filter>Head Files</Filter>
     </ClInclude>
     <ClInclude Include="okFrontPanelDLL.h">
+      <Filter>Head Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FPGAControl.h">
+      <Filter>Head Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SomeFpga.h">
       <Filter>Head Files</Filter>
     </ClInclude>
   </ItemGroup>
