--- a/VC_Acq_ExtClk.vcxproj
+++ b/VC_Acq_ExtClk.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="FPGAControl.cpp" />
     <ClCompile Include="FPGATest.cpp" />
     <ClCompile Include="motorControl.cpp" />
+    <ClCompile Include="servoControl.cpp" />
     <ClCompile Include="SomeFpga.cpp" />
     <ClCompile Include="utilities.cpp" />
   </ItemGroup>
@@ -39,6 +40,7 @@
     <ClInclude Include="motorControl.h" />
     <ClInclude Include="NIDAQmx.h" />
     <ClInclude Include="okFrontPanelDLL.h" />
+    <ClInclude Include="servoControl.h" />
     <ClInclude Include="SomeFpga.h" />
     <ClInclude Include="utilities.h" />
   </ItemGroup>
