--- a/VC_Acq_ExtClk.vcxproj.filters
+++ b/VC_Acq_ExtClk.vcxproj.filters
@@ -7,16 +7,10 @@
     <ClCompile Include="dataOneSample.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="experimentUserInterface.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="utilities.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="motorControl.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="expParadigm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FPGAControl.cpp">
@@ -29,6 +23,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="servoControl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="expParadigmServoPerturbation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -45,9 +45,6 @@
     <ClInclude Include="motorControl.h">
       <Filter>Head Files</Filter>
     </ClInclude>
-    <ClInclude Include="expParadigm.h">
-      <Filter>Head Files</Filter>
-    </ClInclude>
     <ClInclude Include="NIDAQmx.h">
       <Filter>Head Files</Filter>
     </ClInclude>
@@ -61,6 +58,9 @@
       <Filter>Head Files</Filter>
     </ClInclude>
     <ClInclude Include="servoControl.h">
+      <Filter>Head Files</Filter>
+    </ClInclude>
+    <ClInclude Include="expParadigmServoPerturbation.h">
       <Filter>Head Files</Filter>
     </ClInclude>
   </ItemGroup>
