--- a/VC_Acq_ExtClk.vcxproj
+++ b/VC_Acq_ExtClk.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="dataLogger.cpp" />
     <ClCompile Include="dataOneSample.cpp" />
+    <ClCompile Include="expParadigmMuscleLengthCalibration.cpp" />
     <ClCompile Include="expParadigmServoPerturbation.cpp" />
     <ClCompile Include="FPGAControl.cpp" />
     <ClCompile Include="FPGATest.cpp" />
@@ -33,6 +34,8 @@
   <ItemGroup>
     <ClInclude Include="dataLogger.h" />
     <ClInclude Include="dataOneSample.h" />
+    <ClInclude Include="expParadigmManualPerturbation.h" />
+    <ClInclude Include="expParadigmMuscleLengthCalibration.h" />
     <ClInclude Include="expParadigmServoPerturbation.h" />
     <ClInclude Include="FPGAControl.h" />
     <ClInclude Include="motorControl.h" />
