--- a/VC_Acq_ExtClk.vcxproj
+++ b/VC_Acq_ExtClk.vcxproj
@@ -21,11 +21,14 @@
   <ItemGroup>
     <ClCompile Include="dataLogger.cpp" />
     <ClCompile Include="dataOneSample.cpp" />
+    <ClCompile Include="experimentUserInterface.cpp" />
+    <ClCompile Include="expParadigmManualPerturbation.cpp" />
     <ClCompile Include="expParadigmMuscleLengthCalibration.cpp" />
     <ClCompile Include="expParadigmServoPerturbation.cpp" />
+    <ClCompile Include="expParadigmVoluntaryMovement.cpp" />
     <ClCompile Include="FPGAControl.cpp" />
     <ClCompile Include="FPGATest.cpp" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="experimentUserInterface.cpp" />
     <ClCompile Include="motorControl.cpp" />
     <ClCompile Include="servoControl.cpp" />
     <ClCompile Include="SomeFpga.cpp" />
@@ -37,6 +40,7 @@
     <ClInclude Include="expParadigmManualPerturbation.h" />
     <ClInclude Include="expParadigmMuscleLengthCalibration.h" />
     <ClInclude Include="expParadigmServoPerturbation.h" />
+    <ClInclude Include="expParadigmVoluntaryMovement.h" />
     <ClInclude Include="FPGAControl.h" />
     <ClInclude Include="motorControl.h" />
     <ClInclude Include="NIDAQmx.h" />
