Channel numbers changed

--- a/VC_Acq_ExtClk.vcxproj.filters
+++ b/VC_Acq_ExtClk.vcxproj.filters
@@ -34,12 +34,13 @@
     <ClCompile Include="expParadigmManualPerturbation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="experimentUserInterface.cpp">
-      <Filter>Head Files</Filter>
-    </ClCompile>
     <ClCompile Include="expParadigmVoluntaryMovement.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="experimentUserInterface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="experimentUserInterface.cpp" />
     <ClCompile Include="experimentUserInterface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
