--- a/VC_Acq_ExtClk.vcxproj.filters
+++ b/VC_Acq_ExtClk.vcxproj.filters
@@ -48,6 +48,10 @@
     <ClCompile Include="okFrontPanelDLL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="experimentUserInterface.cpp" />
+    <ClCompile Include="expParadigmCDMRPimplant.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dataLogger.h">
@@ -87,6 +91,9 @@
       <Filter>Head Files</Filter>
     </ClInclude>
     <ClInclude Include="expParadigmVoluntaryMovement.h">
+      <Filter>Head Files</Filter>
+    </ClInclude>
+    <ClInclude Include="expParadigmCDMRPimplant.h">
       <Filter>Head Files</Filter>
     </ClInclude>
   </ItemGroup>
