DAQ pin numbers updated; corrected loadCellSacle variable

--- a/VC_Acq_ExtClk.vcxproj.filters
+++ b/VC_Acq_ExtClk.vcxproj.filters
@@ -65,6 +65,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="experimentUserInterface.cpp" />
+    <ClCompile Include="experimentUserInterface.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utilities.h">
