--- a/VC_Acq_ExtClk.vcxproj
+++ b/VC_Acq_ExtClk.vcxproj
@@ -28,6 +28,8 @@
     <ClCompile Include="expParadigmServoPerturbation.cpp" />
     <ClCompile Include="expParadigmVoluntaryMovement.cpp" />
     <ClCompile Include="FPGAControl.cpp" />
+    <ClCompile Include="fpgaIO.cpp" />
+    <ClCompile Include="fpgaIONeuromorphic.cpp" />
     <ClCompile Include="FPGATest.cpp" />
     <ClCompile Include="experimentUserInterface.cpp" />
     <ClCompile Include="motorControl.cpp" />
@@ -45,6 +47,8 @@
     <ClInclude Include="expParadigmServoPerturbation.h" />
     <ClInclude Include="expParadigmVoluntaryMovement.h" />
     <ClInclude Include="FPGAControl.h" />
+    <ClInclude Include="fpgaIO.h" />
+    <ClInclude Include="fpgaIONeuromorphic.h" />
     <ClInclude Include="motorControl.h" />
     <ClInclude Include="NIDAQmx.h" />
     <ClInclude Include="okFrontPanelDLL.h" />
