--- a/VC_Acq_ExtClk.vcxproj.filters
+++ b/VC_Acq_ExtClk.vcxproj.filters
@@ -70,6 +70,7 @@
     <ClCompile Include="hardwareConfiguration.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="experimentUserInterface.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utilities.h">
@@ -109,12 +110,6 @@
       <Filter>Head Files</Filter>
     </ClInclude>
     <ClInclude Include="motorData.h">
-      <Filter>Head Files</Filter>
-    </ClInclude>
-    <ClInclude Include="logger.h">
-      <Filter>Head Files</Filter>
-    </ClInclude>
-    <ClInclude Include="listman.h">
       <Filter>Head Files</Filter>
     </ClInclude>
     <ClInclude Include="DAQ.h">
