Adding the main function to main.cpp and move proceedState to main.cpp

--- a/VC_Acq_ExtClk.vcxproj.filters
+++ b/VC_Acq_ExtClk.vcxproj.filters
@@ -50,7 +50,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="experimentUserInterface.cpp" />
-    <ClCompile Include="experimentUserInterface.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
