--- a/VC_Acq_ExtClk.vcxproj
+++ b/VC_Acq_ExtClk.vcxproj
@@ -20,14 +20,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DAQ.cpp" />
-    <ClCompile Include="experimentUserInterface.cpp" />
     <ClCompile Include="expParadigmManualPerturbation.cpp" />
     <ClCompile Include="expParadigmMuscleLengthCalibration.cpp" />
     <ClCompile Include="expParadigmServoPerturbation.cpp" />
     <ClCompile Include="expParadigmVoluntaryMovement.cpp" />
     <ClCompile Include="FPGAControl.cpp" />
-    <ClCompile Include="experimentUserInterface.cpp" />
     <ClCompile Include="hardwareConfiguration.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="motorControl.cpp" />
     <ClCompile Include="okFrontPanelDLL.cpp" />
     <ClCompile Include="servoControl.cpp" />
