--- a/VC_Acq_ExtClk.vcxproj.filters
+++ b/VC_Acq_ExtClk.vcxproj.filters
@@ -52,6 +52,10 @@
     <ClCompile Include="expParadigmCDMRPimplant.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="experimentUserInterface.cpp" />
+    <ClCompile Include="AdeptArmAPI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dataLogger.h">
@@ -94,6 +98,9 @@
       <Filter>Head Files</Filter>
     </ClInclude>
     <ClInclude Include="expParadigmCDMRPimplant.h">
+      <Filter>Head Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AdeptArmAPI.h">
       <Filter>Head Files</Filter>
     </ClInclude>
   </ItemGroup>
