--- a/VC_Acq_ExtClk.vcxproj.filters
+++ b/VC_Acq_ExtClk.vcxproj.filters
@@ -28,7 +28,6 @@
     <ClCompile Include="expParadigmVoluntaryMovement.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="experimentUserInterface.cpp" />
     <ClCompile Include="experimentUserInterface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -51,6 +50,12 @@
     </ClCompile>
     <ClCompile Include="experimentUserInterface.cpp" />
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="fpgaIO.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="fpgaIONeuromorphic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -92,6 +97,12 @@
       <Filter>Head Files</Filter>
     </ClInclude>
     <ClInclude Include="hardwareConfiguration.h">
+      <Filter>Head Files</Filter>
+    </ClInclude>
+    <ClInclude Include="fpgaIO.h">
+      <Filter>Head Files</Filter>
+    </ClInclude>
+    <ClInclude Include="fpgaIONeuromorphic.h">
       <Filter>Head Files</Filter>
     </ClInclude>
   </ItemGroup>
