--- a/VC_Acq_ExtClk.vcxproj
+++ b/VC_Acq_ExtClk.vcxproj
@@ -19,37 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DAQ.cpp" />
-    <ClCompile Include="expParadigmManualPerturbation.cpp" />
-    <ClCompile Include="expParadigmMuscleLengthCalibration.cpp" />
-    <ClCompile Include="expParadigmServoPerturbation.cpp" />
-    <ClCompile Include="expParadigmVoluntaryMovement.cpp" />
-    <ClCompile Include="FPGAControl.cpp" />
-    <ClCompile Include="fpgaIO.cpp" />
-    <ClCompile Include="fpgaIONeuromorphic.cpp" />
-    <ClCompile Include="hardwareConfiguration.cpp" />
+    <ClCompile Include="AdeptArmAPI.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="motorControl.cpp" />
-    <ClCompile Include="okFrontPanelDLL.cpp" />
-    <ClCompile Include="servoControl.cpp" />
-    <ClCompile Include="SomeFpga.cpp" />
     <ClCompile Include="utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DAQ.h" />
-    <ClInclude Include="expParadigmManualPerturbation.h" />
-    <ClInclude Include="expParadigmMuscleLengthCalibration.h" />
-    <ClInclude Include="expParadigmServoPerturbation.h" />
-    <ClInclude Include="expParadigmVoluntaryMovement.h" />
-    <ClInclude Include="FPGAControl.h" />
-    <ClInclude Include="fpgaIO.h" />
-    <ClInclude Include="fpgaIONeuromorphic.h" />
-    <ClInclude Include="hardwareConfiguration.h" />
-    <ClInclude Include="motorControl.h" />
-    <ClInclude Include="NIDAQmx.h" />
-    <ClInclude Include="okFrontPanelDLL.h" />
-    <ClInclude Include="servoControl.h" />
-    <ClInclude Include="SomeFpga.h" />
+    <ClInclude Include="AdeptArmAPI.h" />
     <ClInclude Include="utilities.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -181,7 +156,7 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;nidaqmx.lib;pthreadVC2.lib;pthreadVSE2.lib;okFrontPanelDLL.lib;pthreadVCE2.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;C:\T5_BbdlSanger\UPC_R01_grant\source\glut\glut32.lib;C:\SDK\pthreads\lib\x86\pthreadVC2.lib;C:\Program Files\National Instruments\NI-DAQ\DAQmx ANSI C Dev\lib\msvc\NIDAQmx.lib;C:\SDK\AntTweakBar\lib\AntTweakBar.lib;C:\Program Files\Intel\Composer XE 2011 SP1\ipp\lib\ia32\ipps.lib;C:\Program Files\Lua\5.1\lib\lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;nidaqmx.lib;pthreadVC2.lib;pthreadVSE2.lib;okFrontPanelDLL.lib;pthreadVCE2.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;C:\T5_BbdlSanger\UPC_R01_grant\source\glut\glut32.lib;C:\SDK\pthreads\lib\x86\pthreadVC2.lib;C:\Program Files\National Instruments\NI-DAQ\DAQmx ANSI C Dev\lib\msvc\NIDAQmx.lib;C:\SDK\AntTweakBar\lib\AntTweakBar.lib;C:\Program Files\Lua\5.1\lib\lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <AdditionalLibraryDirectories>C:\Users\PXI_BBDL\Documents\GitHub\R01v2\externalLibraries;$(ProgramFiles)\National Instruments\Shared\ExternalCompilerSupport\C\lib32\msvc;C:\Users\PXI_BBDL\Documents\GitHub\MakeT5GreatAgain\externalLibraries;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SubSystem>Console</SubSystem>
